--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "everybody_codes_2024"
-version = "0.1.0"
+name = "everybody_codes"
+version = "1.1.0"
 edition = "2021"
 
 [lints.rust]
